[Bug #1531] Ensure long comments are wrapped to prevent them overflowing the comment container.

--- a/src/component/comment/Comments.scss
+++ b/src/component/comment/Comments.scss
@@ -31,7 +31,9 @@
 }
 
 .comment .comment-text {
-  white-space: pre;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+  hyphens: manual;
 }
 
 .comment .metadata .actionable-reaction {
